--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,11 +10,11 @@ develop-eggs-directory=../../eggs/develop-eggs
 [versions]
 [part]
 recipe = minitage.recipe.cmmi
-url = http://${mirrors:gentoo}/gentoo/distfiles/GeoIP-1.4.6.tar.gz
-md5sum = cb14b1beeb40631a12676b11ca0c309a
+url = http://${mirrors:gentoo}/distfiles/GeoIP-1.4.8.tar.gz
+md5sum = 05b7300435336231b556df5ab36f326d
 
 [mirrors]
-gentoo=mirror.muntinternet.net/pub
+gentoo=gentoo.tiscali.nl
 
 
 
