--- a/buildout.cfg
+++ b/buildout.cfg
@@ -12,6 +12,8 @@ develop-eggs-directory=../../eggs/develop-eggs
 recipe = minitage.recipe.cmmi
 url = http://${mirrors:gentoo}/distfiles/GeoIP-1.4.8.tar.gz
 md5sum = 05b7300435336231b556df5ab36f326d
+patches=${buildout:directory}/minitage.patch
+patch-options=-Np1
 
 [mirrors]
 gentoo=gentoo.tiscali.nl
