--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,10 +10,11 @@ develop-eggs-directory=../../eggs/develop-eggs
 [versions]
 [part]
 recipe = minitage.recipe.cmmi
-url = http://${mirrors:gentoo}/distfiles/GeoIP-1.4.8.tar.gz
-md5sum = 05b7300435336231b556df5ab36f326d
-patches=${buildout:directory}/minitage.patch
-patch-options=-Np1
+url = ftp://alpha.gnu.org/pub/gnu/automake/automake-1.11.2b.tar.gz
+md5sum = e559d6ffafae403b87f0c3c332c9636e
+
+#patches=${buildout:directory}/minitage.patch
+#patch-options=-Np1
 
 [mirrors]
 gentoo=gentoo.tiscali.nl
